fix: fix navigation button on small screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,7 @@ article {
   top: 0;
   left: 0;
   padding: var(--inner-padding);
+  padding-bottom: 0px;
 }
 
 .top-fixed *:nth-child(1) a {
